--- a/Domozique/app/src/main/res/layout/piano.xml
+++ b/Domozique/app/src/main/res/layout/piano.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/doButton2"
+        android:id="@+id/doaButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
         android:layout_marginStart="46dp"
