--- a/Domozique/app/src/main/res/layout/piano.xml
+++ b/Domozique/app/src/main/res/layout/piano.xml
@@ -9,12 +9,11 @@
         android:id="@+id/doButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="67dp"
         android:text="DO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,91 +21,84 @@
         android:id="@+id/laButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="396dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="LA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/solButton" />
 
     <Button
         android:id="@+id/solButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="324dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="SOL"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/faButton" />
 
     <Button
         android:id="@+id/reButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="RE"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/doButton" />
 
     <Button
         android:id="@+id/doaButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="548dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="DO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/siButton" />
 
     <Button
         android:id="@+id/faButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="FA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/miButton" />
 
     <Button
         android:id="@+id/miButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="MI"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/reButton" />
 
     <Button
         android:id="@+id/siButton"
         android:layout_width="298dp"
         android:layout_height="63dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="67dp"
         android:text="SI"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/laButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
